# material-decoration

./: CMakeLists.txt  README.md
src/: AppIconButton.h  AppMenuButton.cc  AppMenuButton.h  AppMenuButtonGroup.cc  AppMenuButtonGroup.h  AppMenuModel.cc  AppMenuModel.h  ApplicationMenuButton.h  BuildConfig.h.cmake  Button.cc  Button.h  CMakeLists.txt  CloseButton.h  ConfigurationModule.cc  ConfigurationModule.h  ContextHelpButton.h  Decoration.cc  Decoration.h  InternalSettingsSchema.kcfg  Material.h  MinimizeButton.h  OnAllDesktopsButton.h  ShadeButton.h  TextButton.cc  TextButton.h  plugin.cc
src/libdbusmenuqt/: CMakeLists.txt
src/libdbusmenuqt/test/: CMakeLists.txt
